--- a/resources/css/scoutingPASS.css
+++ b/resources/css/scoutingPASS.css
@@ -11,8 +11,8 @@ html, body{
     width: 100%;
     margin: 0;
     padding: 0;
-    color: white;
-    background-color: black;
+    color: black;
+    background-color: #ec01ab;
 }
 
 #prematch_table, #postmatch_table {
