--- a/resources/css/scoutingPASS.css
+++ b/resources/css/scoutingPASS.css
@@ -12,7 +12,7 @@ html, body{
     margin: 0;
     padding: 0;
     color: black;
-    background-color: #ec01ab;
+    background-color: #EC01AB;
 }
 
 #prematch_table, #postmatch_table {
@@ -80,8 +80,8 @@ html, body{
     position: absolute;
     left: 0;
     top: 0;
-    color: white;
-    background-color: black;
+    color: black;
+    background-color: #EC01AB;
     font-family : -apple-system, BlinkMacSystemFont, Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
     text-align: justify;
 }
@@ -118,7 +118,7 @@ h1{
 }
 
 #page2, #page4 {
-    color: black;
+    color: #EC01AB;
 }
 
 h2{
