--- a/resources/css/scoutingPASS.css
+++ b/resources/css/scoutingPASS.css
@@ -34,7 +34,7 @@ html, body{
     font-style: bold;
     letter-spacing: 1px;
     border-width: 4px;
-    border-color: black;
+    border-color: white;
 }
 
 .button {
@@ -44,7 +44,7 @@ html, body{
 
 #autonHeader, #endgameHeader, #teleopHeader1, #teleopHeader2{
     color:  rgb(236,01,171);
-    border-color: black;
+    border-color: white;
     border-width: 4px;
 }
 
@@ -81,7 +81,7 @@ html, body{
     left: 0;
     top: 0;
     color: rgb(236,01,171);
-    background-color: rgb(236,01,171);
+    background-color: white;
     font-family : -apple-system, BlinkMacSystemFont, Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important;
     text-align: justify;
 }
